crates/service/tests/code_action/snapshots/features__code_action__split_types__field.snap
---
source: crates/service/tests/code_action/split_types.rs
expression: response
---
[
  {
    "title": "Split fields",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 16
              },
              "end": {
                "line": 2,
                "character": 37
              }
            },
            "newText": "(field i16) (field (mut f32))"
          }
        ]
      }
    }
  }
]
