crates/service/tests/code_action/snapshots/features__code_action__split_types__local.snap
---
source: crates/service/tests/code_action/split_types.rs
expression: response
---
[
  {
    "title": "Split locals",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 25
              }
            },
            "newText": "(local i32) (local f64)"
          }
        ]
      }
    }
  }
]
