crates/service/tests/code_action/snapshots/features__code_action__split_types__result.snap
---
source: crates/service/tests/code_action/split_types.rs
expression: response
---
[
  {
    "title": "Split results",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 26
              }
            },
            "newText": "(result i32) (result f64)"
          }
        ]
      }
    }
  }
]
